fix mainpage/navbar/sidemenu text wrap

--- a/app/frontend/src/scss/NavBar.scss
+++ b/app/frontend/src/scss/NavBar.scss
@@ -47,6 +47,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  white-space: nowrap;
+  overflow: hidden;
   ul {
     margin: 0;
     padding: 0;
@@ -65,6 +67,11 @@
         height: 50px;
         border-radius: 50%;
       }
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -o-user-select: none;
+      user-select: none;
     }
   }
   img { /* config img */
